--- a/assets/templates/footer.html
+++ b/assets/templates/footer.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/footer.css">
+<link rel="stylesheet" href="./css/footer.css">
 <footer  class="footer">
     <div class="footer-wrapper">
         <div class="desktop-logo">
@@ -31,26 +31,26 @@
         <div id="menu-navigation-id" class="menu-wrapper">
             <div class="menu-content" >
                 <div id="summary-menu-id" class="footer-icon-box">
-                    <a href="/summary.html" class="footer-link">
-                        <img src="/assets/svg/summary.svg" alt="Summary" class="footer-icon"> 
+                    <a href="./summary.html" class="footer-link">
+                        <img src="./assets/svg/summary.svg" alt="Summary" class="footer-icon"> 
                         Summary
                     </a>
                 </div>
                 <div id="board-menu-id" class="footer-icon-box">
-                    <a href="/board.html" class="footer-link">
-                        <img src="/assets/svg/board.svg" alt="Board" class="footer-icon">
+                    <a href="./board.html" class="footer-link">
+                        <img src="./assets/svg/board.svg" alt="Board" class="footer-icon">
                         Board
                     </a>
                 </div>
                 <div id="add-task-menu-id" class="footer-icon-box">
-                    <a href="/add_task.html" class="footer-link">
-                        <img src="/assets/svg/add_tasks.svg" alt="Add Tasks" class="footer-icon">
+                    <a href="./add_task.html" class="footer-link">
+                        <img src="./assets/svg/add_tasks.svg" alt="Add Tasks" class="footer-icon">
                         Add Tasks
                     </a>
                 </div>
                 <div id="contacts-menu-id" class="footer-icon-box">
-                    <a href="/contacts.html" class="footer-link">
-                        <img src="/assets/svg/contacts.svg" alt="Contacts" class="footer-icon">
+                    <a href="./contacts.html" class="footer-link">
+                        <img src="./assets/svg/contacts.svg" alt="Contacts" class="footer-icon">
                         Contacts
                     </a>
                     </div>
@@ -60,10 +60,10 @@
        
         <div class="desktop-data-box">
             <div class="desktop-data-content">
-                <a href="/privacy_policy.html" class="desktop-data-link">Privacy Policy</a>
+                <a href="./privacy_policy.html" class="desktop-data-link">Privacy Policy</a>
             </div>
             <div  class="desktop-data-content">
-                <a href="/legal_notice.html" class="desktop-data-link">Legal notice</a>
+                <a href="./legal_notice.html" class="desktop-data-link">Legal notice</a>
             </div>
         </div>
         
