--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -11,13 +11,13 @@
     <span class="header-info">Kanban Project Management Tool</span>
     <div id="header-menu-id" class="header-menu-container" >
       
-      <a href="/help.html">
-        <img  class="header-logo" src="/assets/img/help.png" alt="join logo" />
+      <a href="./help.html">
+        <img  class="header-logo" src="./assets/img/help.png" alt="join logo" />
         </a>
       <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
       <div id="logout-id" class="logout-dropdown">
-          <a href="/privacy_policy.html" >Privacy Policy</a>
-          <a href="/legal_notice.html">Legal Notice</a>
+          <a href="./privacy_policy.html" >Privacy Policy</a>
+          <a href="./legal_notice.html">Legal Notice</a>
           
           <a href="./index.html">Log out</a>
       </div>
