--- a/css/summary/summary_media.css
+++ b/css/summary/summary_media.css
@@ -1,4 +1,7 @@
 @media (min-width: 761px) {
+  .summary-greeting-overlay {
+    display: none;
+  }
   .summary-wrapper {
     margin: 144px 0 0 calc(232px);
     max-width: 1920px;
@@ -35,7 +38,6 @@
   }
   .summary-column {
     width: 100%;
-    align-items: center;
     gap: 32px;
     margin-bottom: 8px;
   }
@@ -52,7 +54,7 @@
   }
   .summary-secondary {
     text-align: center;
-    width: 420px;
+    width: 100%;
   }
   .bottom-hover-container {
     width: 124px;
@@ -177,9 +179,6 @@
     width: 223px;
     height: 166px;
   }
-  .summary-secondary {
-    width: 490px;
-  }
   .bottom-hover-container {
     width: 124px;
   }
@@ -230,12 +229,12 @@
     width: 184px;
     height: 180px;
   }
-  .summary-secondary {
-    width: 576px;
-  }
 }
 
 @media (min-width: 1341px) {
+  .summary-overview {
+    align-items: start;
+  }
   .summary-title h1 {
     font-size: 64px;
   }
@@ -252,6 +251,7 @@
     margin-left: 32px;
   }
   .summary-column {
+    display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: start;
@@ -275,6 +275,32 @@
 }
 
 @media (max-width: 760px) {
+  .summary-greeting-overlay {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: white;
+    animation: animateGreeting 2s forwards;
+    transition: all 300ms ease-in-out;
+  }
+  .greetings-content span {
+    text-align: center;
+  }
+
+  @keyframes animateGreeting {
+    0% {
+      visibility: visible;
+    }
+    100% {
+      visibility: hidden;
+    }
+  }
   .summary-overview {
     gap: 16px;
   }
