--- a/css/global.css
+++ b/css/global.css
@@ -13,7 +13,7 @@
 
 @font-face {
   font-family: "Inter";
-  src: url("./assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
+  src: url("../assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
