--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -85,6 +85,7 @@
   }
   .at-prio-img {
     justify-content: space-between;
+    gap: 0px;
   }
   .at-section {
     width: 100%;
@@ -107,6 +108,7 @@
   .content-bottom-and-rigth {
     width: 100%;
   }
+
   .vertical-bar-container {
     height: 545px;
     display: flex;
