--- a/css/board/board.css
+++ b/css/board/board.css
@@ -1,6 +1,10 @@
 .board-at-btn span {
   display: none;
 }
+.board-wrapper,
+.board-content-wrapper {
+  transition: all 300ms ease-out;
+}
 .board-headline {
   display: flex;
   justify-content: space-between;
