--- a/css/board/board_media.css
+++ b/css/board/board_media.css
@@ -170,7 +170,6 @@
     margin-top: 16px;
   }
   .board-wrapper {
-    max-height: calc(100vh - 181px);
     margin: 144px 16px 0 16px;
   }
   .board-headline h1 {
@@ -198,5 +197,87 @@
   }
   .board-headline h1 {
     font-size: 43px;
+  }
+}
+
+@media (min-width: 761px) and (max-height: 900px) {
+  .board-wrapper {
+    margin: 100px 0 0 calc(232px + 32px);
+  }
+  .board-content-wrapper {
+    max-height: calc(100vh - 170px);
+  }
+}
+
+@media (min-width: 761px) and (max-height: 573px) {
+  .board-headline h1 {
+    font-size: 47px;
+  }
+  .board-content-wrapper {
+    max-height: calc(100vh - 160px);
+  }
+}
+
+@media (min-width: 1341px) and (max-height: 900px) {
+  .board-content-wrapper {
+    max-height: calc(100vh - 220px);
+  }
+}
+
+@media (min-width: 1341px) and (max-height: 700px) {
+  .board-content-wrapper {
+    box-shadow: none;
+    border-radius: 0;
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 1341px) and (max-height: 573px) {
+  .board-content-wrapper {
+    max-height: calc(100vh - 160px);
+    padding: 8px;
+  }
+}
+
+@media (max-width: 760px) and (max-height: 900px) {
+  .board-wrapper {
+    margin: 100px 8px 0 8px;
+  }
+  .board-content-wrapper {
+    max-height: calc(100vh - 330px);
+  }
+}
+@media (max-width: 500px) and (max-height: 600px) {
+  .add-task,
+  .magnifier-container {
+    display: none;
+  }
+}
+@media (max-width: 761px) and (max-height: 600px) {
+  .board-headline h1 {
+    font-size: 47px;
+  }
+  .board-content-wrapper {
+    max-height: calc(100vh - 250px);
+    margin-top: 8px;
+  }
+  .board-search-mobile {
+    position: absolute;
+    top: 94px;
+    left: 145px;
+    min-width: 110px;
+    max-width: calc(100vw - 220px);
+    padding: 6px;
+    height: 40px;
+  }
+}
+@media (max-width: 761px) and (max-height: 450px) {
+  .board-content-wrapper {
+    max-height: calc(100vh - 182px);
+    margin-top: 0px;
+  }
+  .board-search-mobile,
+  .board-headline {
+    display: none;
   }
 }
