--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -94,8 +94,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 120px;
-  width: 120px;
+  height: 140px;
+  width: 140px;
   border-radius: 50%;
   font-size: 47px;
   font-weight: 500;
@@ -117,7 +117,7 @@
   justify-content: center;
   align-items: center;
   height: 360px;
-  margin: 0 72px 0 40px;
+  margin: 0 0px 0 97px;
   transition: all 300ms ease-in-out;
 }
 
@@ -308,13 +308,15 @@
     left: 88px;
     right: 88px;
     height: 800px;
-    max-width: 1920px;
+    max-width: 1750px;
   }
   .ac-card-circle-mobile {
     display: none;
   }
   .ac-card-circle-wrapper {
+    width: 100%;
     display: flex;
+    margin: 16px;
   }
   .card-header {
     width: 40%;
@@ -688,8 +690,5 @@
     padding-inline: 0;
     padding-right: 72px;
     justify-content: start;
-  }
-  .ac-card-circle-wrapper {
-    margin: 0 16px 0 16px;
   }
 }
