--- a/assets/templates/header.html
+++ b/assets/templates/header.html
@@ -16,9 +16,9 @@
         </a>
       <div id="header-initials-id" class="header-profil" onclick="togglelogoutContainer()"></div>
       <div id="logout-id" class="logout-dropdown">
+        <a class="mobile-visibility" href="./help.html" >Help</a>
           <a href="./privacy_policy.html" >Privacy Policy</a>
           <a href="./legal_notice.html">Legal Notice</a>
-          
           <a href="./index.html">Log out</a>
       </div>
     </div>
