--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -55,11 +55,13 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 }
 
 .input_at {
+  max-width: none !important;
   padding: 10px 21px !important;
 }
 
 .due_date_at {
   padding: 10px 15px 10px 21px !important;
+  max-width: none !important;
 }
 
 .input_at input,
@@ -67,6 +69,9 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   font-size: 20px !important;
   transition: all 300ms ease-in-out;
   cursor: pointer;
+}
+.textarea-style {
+  max-width: none;
 }
 
 .rotate-arrow {
