--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -63,6 +63,8 @@
 .contact-name {
   flex: 1;
   padding-right: 16px;
+  overflow-x: auto;
+  word-wrap: break-word;
 }
 
 .open-contacts-name span {
@@ -93,10 +95,10 @@
 }
 
 .desktop-edit-span-small {
-  width: 20px;
+  width: auto;
 }
 .desktop-edit-span-large {
-  width: 45px;
+  width: auto;
 }
 .contact-name {
   margin-left: 34px;
@@ -136,6 +138,7 @@
   flex-direction: column;
   gap: 21px;
   font-size: 20px;
+  word-wrap: break-word;
   transition: all 300ms ease-in-out;
 }
 
