--- a/css/board/board_card.css
+++ b/css/board/board_card.css
@@ -2,6 +2,7 @@
   cursor: pointer;
   background-color: var(--white-color);
   width: 252px;
+  min-width: 190px;
   border-radius: 24px;
   padding: 16px;
   margin-right: 24px;
