--- a/css/register/register_media.css
+++ b/css/register/register_media.css
@@ -149,6 +149,12 @@
 
 /* --------------------Media - height-----------------------------*/
 @media (min-width: 761px) and (max-height: 758px) {
+  .content {
+    margin-top: 96px;
+  }
+}
+
+@media (min-width: 761px) and (max-height: 886px) {
   .signup-container {
     top: 16px;
   }
@@ -172,7 +178,7 @@
     align-items: end;
   }
   .content {
-    margin-top: 0;
+    margin: 0;
   }
   .login-container .low-height-class {
     display: block;
@@ -189,6 +195,9 @@
   .logo {
     display: none;
   }
+  .container {
+    align-items: center;
+  }
 }
 @media (min-width: 761px) and (max-height: 673px) {
   .container {
@@ -197,6 +206,7 @@
   }
   .content {
     margin-top: 96px;
+    margin-bottom: 12px;
   }
 }
 
@@ -245,7 +255,7 @@
     height: 72px;
   }
   .login-container .low-height-class {
-    top: 26px;
+    top: 0px;
     left: 16px;
   }
 }
@@ -283,7 +293,7 @@
     }
   }
   .back-arrow-container {
-    left: 95%;
+    left: 90%;
   }
 }
 @media (max-width: 760px) and (max-height: 499px) {
