--- a/css/contacts/add_contacts.css
+++ b/css/contacts/add_contacts.css
@@ -67,14 +67,16 @@
   color: white;
 }
 
-.header-content-wrapper h1 {
+.ec-header,
+.ac-header {
   text-wrap: wrap;
-  font-weight: bold;
+  font-weight: 700;
   font-size: 64px;
   transition: all 300ms ease-in-out;
 }
 
-.header-content-wrapper span {
+.ec-text,
+.ac-text {
   font-size: 24px;
   transition: all 300ms ease-in-out;
 }
@@ -536,10 +538,12 @@
 }
 
 @media (max-width: 457px) {
-  .header-content-wrapper h1 {
+  .ec-header,
+  .ac-header {
     font-size: 41px;
   }
-  .header-content-wrapper span {
+  .ec-text,
+  .ac-text {
     font-size: 16px;
   }
   .ac-bottom-line {
@@ -604,10 +608,12 @@
 }
 
 @media (max-height: 648px) and (max-width: 1340px) {
-  .header-content-wrapper h1 {
+  .ec-header,
+  .ac-header {
     font-size: 41px;
   }
-  .header-content-wrapper span {
+  .ec-text,
+  .ac-text {
     font-size: 16px;
   }
   .ac-bottom-line {
