--- a/css/contacts/show_contact.css
+++ b/css/contacts/show_contact.css
@@ -6,6 +6,7 @@
   right: 0;
   height: auto;
   z-index: 989;
+  max-width: 1440px;
   overflow: hidden;
   transition: all 300ms ease-in-out;
 }
@@ -222,6 +223,7 @@
     bottom: 16px;
     padding: 32px;
     left: calc(232px + 455px);
+    max-height: 500px;
     transform: translateX(100%);
   }
   .open-contacts-header {
@@ -238,7 +240,7 @@
 
 @media (min-width: 2500px) {
   .show-overlay {
-    transform: translateY(100%);
+    transform: translateY(200%);
   }
 }
 
