--- a/css/global.css
+++ b/css/global.css
@@ -251,6 +251,7 @@ input {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  background: white;
   padding: 12px 21px;
 }
 
