--- a/css/add_task/add_task_media.css
+++ b/css/add_task/add_task_media.css
@@ -102,6 +102,7 @@
     display: flex;
     align-items: start;
     gap: 32px;
+    background: white;
     max-width: 1920px;
   }
   .content-top-and-left,
@@ -258,6 +259,9 @@
     top: 1px;
     left: 85px;
   }
+  .content-bottom-container {
+    height: 50px;
+  }
 }
 
 @media (max-width: 418px) {
@@ -352,7 +356,7 @@
 @media (max-width: 760px) and (max-height: 900px) {
   .content-container {
     margin: 180px 0px 0px 0;
-    max-height: calc(100vh - 340px);
+    max-height: calc(100vh - 310px);
   }
 }
 
