--- a/css/add_task/add_task.css
+++ b/css/add_task/add_task.css
@@ -136,6 +136,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
   left: 0;
   right: 0;
   bottom: 80px;
+  z-index: 1000;
   transition: all 300ms ease-in-out;
 }
 
