--- a/css/contacts/contacts.css
+++ b/css/contacts/contacts.css
@@ -20,13 +20,8 @@
   width: 100%;
 }
 
-.all-contacts-content {
-  margin: 24px 24px 0 24px;
-}
-
 .letter-style {
   position: relative;
-  padding: 17px 0px 17px 40px;
   font-size: 20px;
   width: 100%;
   transition: all 300ms ease-in-out;
@@ -52,7 +47,7 @@
 .contact-style {
   display: flex;
   align-items: center;
-  padding: 15px 0px 15px 24px;
+  padding-block: 15px;
   cursor: pointer;
   border-radius: 10px;
   margin: 2px 0 1px 0;
@@ -105,7 +100,6 @@
   word-wrap: break-word;
   overflow-x: auto;
   width: 100%;
-  padding-left: 24px;
   transition: all 300ms ease-in-out;
 }
 
@@ -166,9 +160,21 @@
   .contact-style:active {
     background: var(--focus-color-btn);
   }
+  .contact-content {
+    padding-left: 35px;
+  }
+  .all-contacts-content {
+    margin: 24px;
+  }
+  .letter-style {
+    padding: 17px 0px 17px 36px;
+  }
+  .contact-style {
+    padding-left: 20px;
+  }
 }
 
-@media (min-width: 1340px) {
+@media (min-width: 1341px) {
   .all-contacts {
     max-width: 456px;
     background: white;
@@ -181,18 +187,31 @@
   }
 }
 
-@media (max-width: 761px) {
+@media (max-width: 760px) {
   .contact-style.selected-contact:active {
     background: var(--focus-color-btn);
   }
   .contact-style:active {
     background: var(--focus-color-btn);
   }
+  .contact-content {
+    padding-left: 35px;
+  }
+  .all-contacts-content {
+    margin: 24px 24px 0 24px;
+  }
+  .letter-style {
+    padding: 17px 0px 17px 36px;
+  }
+  .contact-style {
+    padding-left: 20px;
+  }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 450px) {
   .contact-content {
     font-size: 16px;
+    padding-left: 16px;
   }
   .all-contacts-content {
     margin-inline: 8px;
@@ -202,9 +221,6 @@
   }
   .letter-style {
     padding: 17px 0px 17px 22px;
-  }
-  .contact-circle {
-    margin-right: 12px;
   }
   .contact-content span:last-child {
     font-size: 12px;
