--- a/css/board/board_add_task_overlay.css
+++ b/css/board/board_add_task_overlay.css
@@ -52,14 +52,14 @@
   left: 0;
   right: 0;
   bottom: 0;
+  height: 85px;
   transition: all 300ms ease-in-out;
   z-index: 101;
-  margin-top: 10px;
 }
 
 @media (min-width: 761px) {
   .content-container-board {
-    max-height: calc(100vh - 380px);
+    max-height: calc(100vh - 280px);
   }
   .close-board-at,
   .close-edit-at {
@@ -86,15 +86,13 @@
     top: 0;
     background: #2f2f2f8d;
   }
-  .content-bottom-container-board {
-    position: static;
-  }
   .board-at-section {
     margin-inline: 16px;
     border-radius: 20px;
     background: white;
     width: 100%;
     padding: 32px;
+    height: calc(100vh - 100px);
   }
   .board-at-wrapper {
     height: 100vh;
@@ -118,7 +116,7 @@
     display: flex;
     gap: 32px;
     max-width: 1920px;
-    height: calc(100vh - 390px);
+    height: calc(100vh - 310px);
     padding: 4px;
   }
   .board-at-section {
@@ -127,13 +125,10 @@
     transform: translateY(0);
     transform: translateX(200%);
     padding: 70px;
-    height: calc(100vh - 200px);
     overflow: hidden;
-    max-height: 1000px;
   }
   .content-bottom-container-board {
     position: absolute;
-    margin-bottom: 16px;
     padding-left: 72px;
     padding-right: 70px;
   }
@@ -153,7 +148,7 @@
 
 @media (max-width: 760px) {
   .content-container-board {
-    max-height: calc(100vh - 380px);
+    max-height: calc(100vh - 338px);
   }
   .close-board-at,
   .close-edit-at {
@@ -164,20 +159,21 @@
     bottom: 0px;
     left: 0px;
     top: 0;
-    background: #2f2f2f8d;
-  }
-  .content-bottom-container-board {
-    position: static;
+    z-index: 0;
+    background: transparent;
   }
   .board-at-section {
     margin-inline: 16px;
-    border-radius: 20px;
+    border-radius: 0px;
     background: white;
     width: 100%;
     padding: 16px;
     margin-top: 16px;
+    margin-inline: 0;
+
     height: calc(100vh - 178px);
   }
+
   .board-at-wrapper {
     height: 100vh;
     display: flex;
@@ -195,10 +191,6 @@
 }
 
 @media (max-width: 481px) {
-  .board-at-section {
-    margin-inline: 0px;
-    border-radius: 0;
-  }
   .board-at-headline {
     font-size: 43px;
   }
@@ -206,9 +198,19 @@
   .close-edit-at {
     top: 28px;
   }
+  .content-container-board {
+    max-height: calc(100vh - 300px);
+  }
 }
+@media (max-width: 466px) {
+  .content-bottom-container-board {
+    height: 50px;
+  }
+}
+
 @media (max-width: 760px) and (max-height: 700px) {
   .board-at-section {
+    position: relative;
     margin-inline: 0px;
     border-radius: 0;
     margin-top: 0px;
@@ -218,7 +220,10 @@
     display: block;
   }
   .content-container-board {
-    max-height: calc(100vh - 150px);
+    max-height: calc(100vh - 160px);
+  }
+  .board-overlay {
+    z-index: 999;
   }
 }
 
@@ -227,11 +232,7 @@
     font-size: 38px;
   }
   .content-container-board {
-    max-height: calc(100vh - 120px);
-  }
-  .bottom-container-position {
-    position: absolute;
-    bottom: 8px;
+    max-height: calc(100vh - 150px);
   }
 }
 @media (min-width: 761px) and (max-height: 700px) {
@@ -246,8 +247,8 @@
     border-radius: 0;
   }
   .content-container-board {
-    max-height: calc(100vh - 200px);
-    margin-top: 42px;
+    max-height: calc(100vh - 180px);
+    margin-top: 0px;
   }
   .board-at-headline {
     top: 0;
@@ -260,7 +261,7 @@
 }
 @media (min-width: 1341px) and (max-height: 700px) {
   .content-container-board {
-    height: calc(100vh - 240px);
+    height: calc(100vh - 255px);
     margin-top: 0px;
     max-height: none;
   }
@@ -284,10 +285,24 @@
   }
   .content-container-board {
     margin-top: 24px;
-    height: calc(100vh - 110px);
+    height: calc(100vh - 135px);
   }
   .close-board-at,
   .close-edit-at {
     top: 12px;
+  }
+  .content-bottom-container-board {
+    padding-left: 30px;
+    padding-right: 40px;
+  }
+}
+@media (max-width: 466px) and (max-height: 700px) {
+  .content-container-board {
+    max-height: calc(100vh - 120px);
+  }
+}
+@media (max-width: 466px) and (max-height: 500px) {
+  .content-container-board {
+    max-height: calc(100vh - 120px);
   }
 }
