--- a/css/board/board_card_info.css
+++ b/css/board/board_card_info.css
@@ -49,9 +49,8 @@
 
 .board-info-category {
   display: inline-block;
-  height: 48px;
+  height: 36px;
   border-radius: 8px;
-  line-height: 40px;
   margin-left: 16px;
   padding: 4px 24px 4px 24px;
 }
@@ -245,7 +244,7 @@
 }
 @media (min-width: 857px) {
   .card-info-section {
-    margin-inline: 0px;
+    margin-inline: 16px;
   }
   .board-info-big-size {
     max-width: 47vw;
@@ -278,6 +277,11 @@
     right: 48px;
     top: 48px;
   }
+  .board-info-category {
+    height: 27px;
+    line-height: normal;
+  }
+
   .board-info-overlay {
     bottom: 0px;
     left: 0px;
@@ -346,8 +350,7 @@
 
 @media (max-width: 481px) {
   .card-info-section {
-    margin-inline: 0;
-    border-radius: none;
+    margin-inline: 8px;
     background: white;
     width: 100%;
     max-height: 100vh;
@@ -434,6 +437,19 @@
 
 @media (max-width: 760px) and (max-height: 700px) {
   .card-info-wrapper {
+    height: calc(100vh - 100px);
+    margin-top: 50px;
+  }
+  .board-content-container {
+    max-height: calc(100vh - 220px);
+    margin-top: 24px;
+    padding: 0;
+    border-radius: 0px;
+  }
+}
+
+/* @media (max-width: 760px) and (max-height: 700px) {
+  .card-info-wrapper {
     display: block;
     margin-bottom: 0;
   }
@@ -450,15 +466,27 @@
     padding: 0;
     border-radius: 0px;
   }
-}
+} */
 @media (max-width: 760px) and (max-height: 500px) {
+  .card-info-wrapper {
+    display: block;
+    margin-bottom: 0;
+    margin-top: 0;
+  }
   .card-info-section {
+    height: 100vh;
+    width: 100%;
+    margin: 0;
+    border-radius: 0;
+    max-height: 100vh;
     padding: 24px;
   }
   .board-content-container {
     box-shadow: none;
-    max-height: calc(100vh - 160px);
+    max-height: calc(100vh - 120px);
     margin-top: 16px;
+    padding: 0;
+    border-radius: 0px;
   }
   .board-info-title span {
     font-size: 32px;
@@ -471,5 +499,8 @@
   }
   .close-board-info-at {
     top: 33px;
+  }
+  .board-info-menu-container {
+    margin: 0;
   }
 }
