--- a/css/register/register_style.css
+++ b/css/register/register_style.css
@@ -6,8 +6,8 @@
   right: 0;
   z-index: 3000;
   background: var(--mockup-color);
-  animation: animateLogoBg 3s forwards;
-  animation-delay: 600ms;
+  animation: animateLogoBg 1500ms forwards;
+  animation-delay: 700ms;
 }
 
 @keyframes animateLogoBg {
@@ -23,7 +23,7 @@
   left: calc(50% - 100px);
   width: 200px;
   height: 200px;
-  animation: animateLogo 3s forwards;
+  animation: animateLogo 1500ms forwards;
   animation-delay: 300ms;
 }
 .change-color {
