--- a/css/board/board_card.css
+++ b/css/board/board_card.css
@@ -1,3 +1,7 @@
+.card {
+  position: relative;
+}
+
 .board-card {
   cursor: pointer;
   background-color: var(--white-color);
@@ -211,6 +215,14 @@
   background-color: #d1d1d1;
 }
 
+.move-to-button {
+  display: none;
+}
+
+.move-to-container {
+  display: none;
+}
+
 @media (min-width: 761px) {
   .task-container,
   .priority-block {
@@ -222,6 +234,7 @@
   .board-card {
     padding: 16px;
   }
+  
 }
 @media (min-width: 1341px) {
   .task-container,
@@ -246,4 +259,60 @@
   .board-card {
     padding: 16px;
   }
+  .move-to-button {
+    display: block;
+    position: absolute;
+    height: auto;
+    width: auto;
+    top: -10px;
+    right: 48px;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    font-size: 32px;
+  }
+  .move-to-headline {
+    padding: 12.5px;
+    background-color:  var(--white-grey);
+    display: flex;
+    justify-content: space-between;
+  }
+  .move-to-button2 {
+    position: absolute;
+    right: 0;
+    top: 8px;
+    height: 8px;
+    width: auto;
+    border: none;
+    background-color: rgba(255, 255, 255, 0);
+    font-size: 32px;
+  }
+  .move-to-menu {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+  }
+  .move-to-menu ul {
+    flex: 1 1 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 0.75rem;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    background-color: var(--mockup-color);
+    list-style-type: none;
+    color: white;
+  }
+  .move-to-menu ul li {
+    padding: 10.5px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+  .move-to-menu ul li:hover {
+    background-color: var(--focus-color-btn);
+  }
+
+
 }
