--- a/css/global.css
+++ b/css/global.css
@@ -14,7 +14,31 @@
 @font-face {
   font-family: "Inter";
   src: url("../assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
-  font-weight: normal;
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
+  font-weight: 500;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Inter";
+  src: url("../assets/fonts/Inter/InterVariableFontslntwght.ttf") format("truetype");
+  font-weight: 100;
   font-style: normal;
 }
 
